# futuresGarden_ESP

./: .gitignore  BATTERY.md  BEHAVIOR.md  CLAUDE.md  CONVAI.md  DEPLOYMENT.md  HARDWARE.md  PROGRESS.md  README.md  SCREEN.md  UI_SPEC.md  WIRING.md  j9-audio-wiring.md  nfc_tags.json  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  secrets.h.example
main/Audio/: i2s_audio.c  i2s_audio.h
main/BAT_Driver/: BAT_Driver.c
main/Button/: button.c  button.h
main/Convai/: convai.c  convai.h
main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: orb_ui.c  orb_ui.h
main/NFC/: nfc.c  nfc.h
main/OTA/: ota.c  ota.h
main/Wireless/: Wireless.c  Wireless.h  config_fetch.c  config_fetch.h  log_sink.c  log_sink.h
travis_Leftscreen/main/: main.c
